<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".statistic.StatisticActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background = "@color/colorBlack">
        <TextView
            android:id="@+id/txtColumnNameOfGamer"
            style="@style/MyTextViews"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize = "30dp"
            android:text = "@string/Name"/>
        <TextView
            android:id="@+id/txtColumnResultOfGame"
            style="@style/MyTextViews"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize = "30dp"
            android:text = "@string/Points"/>
        <TextView
            android:id="@+id/txtColumnRegime"
            style="@style/MyTextViews"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize = "30dp"
            android:text = "@string/Regime"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id = "@+id/rvStatistic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>