<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".quiz.SelectDifficultyActivity">

    <TextView
        android:id="@+id/txtSelectDifficulty"
        android:text="@string/SelectDifficulty"
        style="@style/MyTextViews"
        app:layout_constraintBottom_toTopOf="@+id/btnEasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnEasy"
        style="@style/MyButtons"
        app:layout_constraintBottom_toTopOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862"
        android:gravity="center"
        android:text="@string/Easy"/>

    <Button
        android:id="@+id/btnHard"
        style="@style/MyButtons"
        android:gravity="center"
        android:text="@string/Hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

</androidx.constraintlayout.widget.ConstraintLayout>