<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:id = "@+id/txtCorrectAnswers"
        style="@style/MyTextViews"
        android:text="@string/CorrectAnswers"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/txtCounter"
        style="@style/MyTextViews"
        android:text="@string/Zero"
        android:layout_toEndOf="@id/txtCorrectAnswers"
        android:textSize="30dp"/>

    <RelativeLayout
        android:id="@+id/relLtChemEl"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/button_shape"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@id/txtCounter">
        <TextView
            android:id="@+id/txtSymbol"
            style="@style/MyTextViews"
            android:textSize="80dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/txtAtomicWeight"
            style="@style/MyTextViews"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"/>
        <TextView
            android:id="@+id/txtAtomicNumber"
            style="@style/MyTextViews"
            android:textSize="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:id="@+id/txtName"
            style="@style/MyTextViews"
            android:textSize="25dp"
            android:layout_below="@id/txtSymbol"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txtChooseVariant"
        style="@style/MyTextViews"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/relLtChemEl"
        android:text="@string/ChooseVariant"
        android:textSize="30dp"
        android:layout_marginBottom="15dp"/>

    <Button
        android:id="@+id/btnFirstVariant"
        style="@style/MyButtons.Variants"
        android:layout_below="@id/txtChooseVariant"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnSecondVariant"
        style="@style/MyButtons.Variants"
        android:layout_below="@id/btnFirstVariant"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnThirdVariant"
        style="@style/MyButtons.Variants"
        android:layout_below="@id/btnSecondVariant"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnFourthVariant"
        style="@style/MyButtons.Variants"
        android:layout_below="@id/btnThirdVariant"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>